--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1,7 +1,7 @@
 #################################################################################
 #MIT License									#
 #										#
-#Copyright (c) 2024 MikeHorn-git						#
+#Copyright (c) 2023-2024 MikeHorn-git						#
 #										#
 #Permission is hereby granted, free of charge, to any person obtaining a copy	#
 #of this software and associated documentation files (the "Software"), to deal	#
@@ -22,86 +22,84 @@
 #SOFTWARE.									#
 #################################################################################
 
-install af_802154 /bin/false		# 6LoWPAN/IEEE 802.15.4 networking
-install amdgpu /bin/false		# AMD GPU driver
-install appletalk /bin/false		# AppleTalk networking protocol
-install ath9k /bin/false		# Atheros 802.11n wireless LAN driver
-install atm /bin/false		# Asynchronous Transfer Mode networking
-install ax25 /bin/false		# AX.25 packet radio protocol
-install b43 /bin/false		# Broadcom 43xx wireless driver
-install bluetooth /bin/false		# Bluetooth protocol stack
-install can /bin/false		# Controller Area Network protocol
-install cfg80211 /bin/false		# Wireless configuration API
-install cifs /bin/true		# CIFS/SMB networking protocol (allow)
-install cramfs /bin/false		# Compressed ROM filesystem
-install dccp /bin/false		# Datagram Congestion Control Protocol
-install decnet /bin/false		# DECnet networking protocol
-install dvb_core /bin/false		# Core module for DVB devices
+install af_802154 /bin/false		    # 6LoWPAN/IEEE 802.15.4 networking
+install amdgpu /bin/false		        # AMD GPU driver
+install appletalk /bin/false		    # AppleTalk networking protocol
+install ath9k /bin/false		        # Atheros 802.11n wireless LAN driver
+install atm /bin/false		            # Asynchronous Transfer Mode networking
+install ax25 /bin/false		            # AX.25 packet radio protocol
+install b43 /bin/false		            # Broadcom 43xx wireless driver
+install bluetooth /bin/false		    # Bluetooth protocol stack
+install can /bin/false		            # Controller Area Network protocol
+install cfg80211 /bin/false	        	# Wireless configuration API
+install cifs /bin/false		            # CIFS/SMB networking protocol
+install cramfs /bin/false		        # Compressed ROM filesystem
+install dccp /bin/false		            # Datagram Congestion Control Protocol
+install decnet /bin/false	        	# DECnet networking protocol
+install dvb_core /bin/false		        # Core module for DVB devices
 install dvb_usb_rtl2832u /bin/false		# DVB-T USB devices with RTL2832U chipset
 install dvb_usb_rtl28xxu /bin/false		# DVB-T USB devices with RTL28xx chipset
-install dvb_usb_v2 /bin/false		# Newer DVB USB framework
-install econet /bin/false		# Acorn Econet protocol
-install exfat /bin/false		# ExFAT filesystem
-install fddi /bin/false		# Fiber Distributed Data Interface networking
-install firewire /bin/false		# FireWire support
+install dvb_usb_v2 /bin/false		    # Newer DVB USB framework
+install econet /bin/false		        # Acorn Econet protocol
+install exfat /bin/false		        # ExFAT filesystem
+install fddi /bin/false		            # Fiber Distributed Data Interface networking
+install firewire /bin/false		        # FireWire support
 install firewire-core /bin/false		# Core FireWire module
 install firewire_ohci /bin/false		# FireWire OHCI driver
 install firewire_sbp2 /bin/false		# FireWire SCSI protocol driver
-install floppy /bin/false		# Floppy disk support
-install freevxfs /bin/false		# FreeVxFS filesystem
-install gfs2 /bin/true		# GFS2 filesystem (allow)
-install hamradio /bin/false		# Amateur radio protocols
-install hfs /bin/false		# Hierarchical File System
-install hfsplus /bin/false		# HFS+ filesystem
-install ib_ipoib /bin/false		# InfiniBand over IP
-install ipx /bin/false		# IPX networking protocol
-install iwlwifi /bin/false		# Intel wireless driver
-install jffs2 /bin/false		# Journaling Flash File System v2
-install jfs /bin/false		# IBM's Journaled File System
-install joydev /bin/false		# Joystick support
-install ksmbd /bin/true		# SMB Direct (allow)
-install lp /bin/false		# Printer support for parallel port
-install mac80211 /bin/false		# IEEE 802.11 networking stack
-install n-hdlc /bin/false		# HDLC networking protocol
-install netrom /bin/false		# Amateur radio networking
-install nfs /bin/true		# Network File System (allow)
-install nfsv3 /bin/true		# NFS version 3 (allow)
-install nfsv4 /bin/true		# NFS version 4 (allow)
-install ntfs /bin/true		# NTFS filesystem (allow)
-install nvidia /bin/true		# NVIDIA graphics driver (allow)
-install p8022 /bin/false		# 802.2 LLC
-install p8023 /bin/false		# 802.3 Ethernet
-install parport /bin/false		# Parallel port support
-install ppp_async /bin/false		# Point-to-Point Protocol for asynchronous connections
-install ppp_deflate /bin/false		# Compression module for PPP
-install ppp_generic /bin/false		# Generic PPP support
-install pppoe /bin/false		# PPP over Ethernet
-install pppox /bin/false		# PPP over various transports
-install psnap /bin/false		# SNAP protocol
-install r820t /bin/false		# Rafael Micro R820T tuner
-install radeon /bin/false		# Radeon GPU driver
-install rds /bin/false		# Reliable Datagram Sockets
-install reiserfs /bin/false		# ReiserFS filesystem
-install rose /bin/false		# Amateur radio protocol
-install rtl2830 /bin/false		# Realtek RTL2830 DVB-T receiver
-install rtl2832 /bin/false		# Realtek RTL2832 DVB-T receiver
-install rtl2832_sdr /bin/false		# RTL2832-based SDR devices
-install rtl2838 /bin/false		# Realtek RTL2838 DVB-T receiver
-install rtl8187 /bin/false		# Realtek RTL8187 wireless LAN driver
-install sctp /bin/false		# Stream Control Transmission Protocol
-install slhc /bin/false		# SLIP/PPP compression and decompression
-install snd_hda_intel /bin/false		# Intel HD Audio driver
-install snd_pcm /bin/false		# PCM sound driver
-install snd_seq /bin/false		# ALSA sequencer support
-install snd_usb_audio /bin/false		# USB Audio driver
-install squashfs /bin/false		# SquashFS filesystem
-install thunderbolt /bin/true		# Thunderbolt support (allow)
-install tipc /bin/false		# Transparent Inter-process Communication
-install tr /bin/false		# Token Ring protocol
-install udf /bin/false		# Universal Disk Format filesystem
-install uhci_hcd /bin/false		# UHCI USB host controller driver
-install usb_storage /bin/false		# USB storage devices
-install uvcvideo /bin/false		# USB Video Class driver
-install uinput /bin/false		# User-level input driver
-install vivid /bin/false		# Virtual video driver
-install x25 /bin/false		# X.25 networking protocol
+install floppy /bin/false	        	# Floppy disk support
+install freevxfs /bin/false		        # FreeVxFS filesystem
+install gfs2 /bin/false		            # GFS2 filesystem
+install hamradio /bin/false		        # Amateur radio protocols
+install hfs /bin/false		            # Hierarchical File System
+install hfsplus /bin/false	        	# HFS+ filesystem
+install ib_ipoib /bin/false	        	# InfiniBand over IP
+install ipx /bin/false		            # IPX networking protocol
+install iwlwifi /bin/false	        	# Intel wireless driver
+install jffs2 /bin/false		        # Journaling Flash File System v2
+install jfs /bin/false		            # IBM's Journaled File System
+install joydev /bin/false	        	# Joystick support
+install ksmbd /bin/false		        # SMB Direct
+install lp /bin/false		            # Printer support for parallel port
+install mac80211 /bin/false	        	# IEEE 802.11 networking stack
+install n-hdlc /bin/false	        	# HDLC networking protocol
+install netrom /bin/false		        # Amateur radio networking
+install nfs /bin/false		            # Network File System
+install nfsv3 /bin/false	            # NFS version 3
+install nfsv4 /bin/false	        	# NFS version 4
+install ntfs /bin/false		            # NTFS filesystem
+install nvidia /bin/false	        	# NVIDIA graphics driver
+install p8022 /bin/false		        # 802.2 LLC
+install p8023 /bin/false		        # 802.3 Ethernet
+install parport /bin/false		        # Parallel port support
+install pmt_class /bin/false		    # Platform Monitoring Telemetry (Intel)
+install pmt_telemetry /bin/false		# Platform Monitoring Telemetry (Intel)
+install ppp_async /bin/false		    # Point-to-Point Protocol for asynchronous connections
+install ppp_deflate /bin/false		    # Compression module for PPP
+install ppp_generic /bin/false		    # Generic PPP support
+install pppoe /bin/false		        # PPP over Ethernet
+install pppox /bin/false		        # PPP over various transports
+install psnap /bin/false		        # SNAP protocol
+install r820t /bin/false		        # Rafael Micro R820T tuner
+install radeon /bin/false		        # Radeon GPU driver
+install rds /bin/false		            # Reliable Datagram Sockets
+install reiserfs /bin/false	        	# ReiserFS filesystem
+install rose /bin/false		            # Amateur radio protocol
+install rtl2830 /bin/false		        # Realtek RTL2830 DVB-T receiver
+install rtl2832 /bin/false	        	# Realtek RTL2832 DVB-T receiver
+install rtl2832_sdr /bin/false	    	# RTL2832-based SDR devices
+install rtl2838 /bin/false		        # Realtek RTL2838 DVB-T receiver
+install rtl8187 /bin/false		        # Realtek RTL8187 wireless LAN driver
+install sctp /bin/false		            # Stream Control Transmission Protocol
+install slhc /bin/false	            	# SLIP/PPP compression and decompression
+install squashfs /bin/false		        # SquashFS filesystem
+install thunderbolt /bin/false	    	# Thunderbolt support
+install tipc /bin/false		            # Transparent Inter-process Communication
+install tr /bin/false	            	# Token Ring protocol
+install udf /bin/false	            	# Universal Disk Format filesystem
+install uhci_hcd /bin/false	        	# UHCI USB host controller driver
+install usb_storage /bin/false	    	# USB storage devices
+install uvcvideo /bin/false		        # USB Video Class driver
+install uinput /bin/false	        	# User-level input driver
+install vivid /bin/false	        	# Virtual video driver
+install x25 /bin/false		            # X.25 networking protocol
