--- a/conf/sysctl.conf
+++ b/conf/sysctl.conf
@@ -1,7 +1,7 @@
 #################################################################################
 #MIT License									#
 #										#
-#Copyright (c) 2023 MikeHorn-git						#
+#Copyright (c) 2023-2024 MikeHorn-git						#
 #										#
 #Permission is hereby granted, free of charge, to any person obtaining a copy	#
 #of this software and associated documentation files (the "Software"), to deal	#
@@ -30,7 +30,7 @@ kernel.kptr_restrict=2
 kernel.panic_on_oops=1
 kernel.perf_cpu_time_max_percent=1
 kernel.perf_event_max_sample_rate=1
-kernel.perf_event_paranoid=2
+kernel.perf_event_paranoid=3
 kernel.pid_max=65536
 kernel.printk=3
 kernel.randomize_va_space=2
@@ -50,6 +50,8 @@ net.ipv4.conf.all.accept_source_route=0
 net.ipv4.conf.all.arp_filter=1
 net.ipv4.conf.all.arp_ignore=2
 net.ipv4.conf.all.drop_gratuitous_arp=1
+net.ipv4.conf.all.forwarding=0
+net.ipv4.conf.all.log_martians=1
 net.ipv4.conf.all.route_localnet=0
 net.ipv4.conf.all.rp_filter=1
 net.ipv4.conf.all.secure_redirects=0
@@ -57,6 +59,7 @@ net.ipv4.conf.all.send_redirects=0
 net.ipv4.conf.all.shared_media=0
 net.ipv4.conf.default.accept_redirects=0
 net.ipv4.conf.default.accept_source_route=0
+net.ipv4.conf.default.log_martians=1
 net.ipv4.conf.default.rp_filter=1
 net.ipv4.conf.default.secure_redirects=0
 net.ipv4.conf.default.send_redirects=0
@@ -71,6 +74,8 @@ net.ipv4.tcp_rfc1337=1
 net.ipv4.tcp_sack=0
 net.ipv4.tcp_syncookies=1
 net.ipv6.conf.default.disable_ipv6=1
+net.ipv6.conf.all.accept_redirects=0
+net.ipv6.conf.default.accept_redirects=0
 
 ### File System ###
 fs.protected_fifos=2
